fix: paddings on mobile

--- a/src/components/layouts/PageLayout/PageLayout.module.scss
+++ b/src/components/layouts/PageLayout/PageLayout.module.scss
@@ -19,7 +19,7 @@
   margin: 0 auto;
 
   @media screen and (max-width: 480px) {
-    padding: 3rem 0;
+    padding: 3rem 1rem;
   }
 
   > * {
